@@ -302,7 +302,7 @@ void place_special_exit(mapstruct *map, int hole_type, RMParms *RP) {
         g_ysize = MIN_RANDOM_MAP_SIZE;
 
     write_parameters_to_string(buf, g_xsize, g_ysize, RP->wallstyle, RP->floorstyle, mon,
-        "none", style, decor, "none", RP->exitstyle, 0, 0, 0,
+        "none", style, decor, "none", RP->exitstyle, NULL, NULL, NULL,
         OPT_WALLS_ONLY, 0, 0, 1, RP->dungeon_level, RP->dungeon_level,
         RP->difficulty, RP->difficulty, -1, 1, 0, 0, 0, 0, RP->difficulty_increase);
     the_exit->slaying = add_string("/!");
@@ -329,7 +329,7 @@ void place_specials_in_map(mapstruct *map, char **layout, RMParms *RP) {
     switch (special_type) {
         /* includes a special map into the random map being made. */
     case SPECIAL_SUBMAP: {
-        special_map = find_style("/styles/specialmaps", 0, RP->difficulty);
+        special_map = find_style("/styles/specialmaps", NULL, RP->difficulty);
         if (special_map == NULL)
             return;
 
